schema/testdata/validation_relationships_one_to_many_missing_relation_attribute/schema.keel
model Author {
    fields {
        written Post @relation(author)
        coWritten Post @relation(coAuthor)
        reviewed Post
    }
}

model Post {
    fields {
        author Author[]
        coAuthor Author[]
    }
}
