schema/testdata/errors/relationships_attr_related_field_must_not_be_duplicated.keel
model Author {
    fields {
        written Post[]
    }
}

model Post {
    fields {
        author Author @relation(written)
        //expect-error:9:17:RelationshipError:Cannot associate with repeated field 'written' on Author to form a one to many relationship because it is already associated with field 'author'
        coAuthor Author @relation(written)
    }
}
